[package]
name = "margo"
version = "0.1.0"
edition = "2021"
authors = ["KAIYOHUGO"]
description = "A Markdown-like Mark Language, It's Simple"

[features]
default = ["serde"]
serde = ["dep:serde"]
json = ["dep:serde_json", "serde"]
cli = ["dep:clap"]

[[bin]]
name = "margo"
required-features = ["serde", "cli", "json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chumsky = "0.8.0"

[dependencies.serde_json]
version = "1.0.81"
optional = true

[dependencies.serde]
version = "1.0.137"
features = ["derive"]
optional = true


[dependencies.clap]
version = "3.1.18"
features = ["derive"]
optional = true
