[package]
name = "margo-vue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.margo]
path = "../../"
features = ["hashing"]

[profile.release]
opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
