[package]
name = "margo-wasm-vue"
version = "0.1.1"
edition = "2021"
authors = ["KAIYOHUGO"]
description = "💠 A Fast Markdown-like Language In Vue, It's Simple"
repository = "https://github.com/TakeUFlab/Margo"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.margo]
path = "../../"
features = ["hashing"]

[profile.release]
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
